# WLM-Structure_Engine

./: README.md  pyproject.toml  setup.cfg
docs/: agents.md  knowledge.md  overview.md  roadmap.md  slp.md
examples/: agent_loop.py
src/wlm_structure_engine/: __init__.py  agent.py  knowledge.py  metacog.py  persona.py  slp.py  utils.py
