[metadata]
name = wlm-structure-engine
version = 0.1.0
description = Dimensional structure → interpretable inputs, stable agents, structured cognition.
author = Wujie Gu
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourname/wlm-structure-engine
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    black
    isort
